--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 #### requirements.txt #####
 flask==3.0.0
 pandas==2.2.3
-statsmodels>=0.14.0
+statsmodels==0.14.0
 scikit-learn==1.3.2
 numpy==1.26.4
